<resources>
    <string name="app_name">DigitalSupplierAgent</string>

    <string name="email_hint_txt">Email</string>
    <string name="password_hint_txt">Password</string>
    <string name="remember_me_check">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_in_btn">Sign in</string>
    <string name="no_account_txt">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="role">Role</string>
    <string name="phone_number">Phone number</string>
    <string name="terms_conditions">I agree to the terms &amp; conditions</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="account_exist">Already have an account?</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="type">Type</string>
    <string name="client">Client</string>
    <string name="date">Date</string>
    <string name="helper_txt">dd/MM/YYYY</string>
    <string name="time_helper_txt">HH:mm</string>
    <string name="time">Start time</string>
    <string name="select_place">Add place</string>
    <string name="add_meeting">Add meeting</string>
    <string name="add_photo">Add photo</string>
    <string name="appointments">Appointments</string>
    <string name="invoices">Invoices</string>
    <string name="duration">Duration</string>
    <string name="completed">Completed</string>
    <string name="total_label">Total</string>
    <string name="discount_label">Discount</string>
    <string name="payment_method">Payment method</string>
    <string name="send_invoice">Send invoice</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="no_comments">No comments to show</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="checkout">Checkout</string>
    <string name="items">Items</string>
    <string name="payout">Payout</string>
    <string name="apply_discount">Apply</string>
    <string name="charge">Charge</string>
    <string name="clients">Clients</string>
    <string name="meetings">Meetings</string>
    <string name="add">Add</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="search_clients">Search for clients</string>
    <string name="search_meetings">Search for meetings</string>
    <string name="search_orders">Search for orders</string>
    <string name="search_products">Search for products</string>
    <string name="search_order_items">Search for items</string>
    <string name="select_client">Select client</string>
    <string name="fab_content_desc">Add meeting</string>
    <string name="location_label">Location</string>
    <string name="meeting_img_desc">Image description</string>
    <string name="send_email_btn_text">Send email</string>

    <string name="forgot_pwd_detail_txt">A link will be sent to your email to reset your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="save_changes">Save changes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_passw_btn_text">Change password</string>
    <string name="prefix">+355</string>
    <string name="splash">Splash icon</string>
    <string name="digital_supplier">DigitalSupplierAgent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_order">Add order</string>
    <string name="add_products">Add products</string>
    <string name="add_location_label_txt">Click button to add location</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="address">Address</string>
    <string name="add_client">Add client</string>
    <string name="img_description">Category img</string>
    <string name="inital_quantity">0</string>
    <string name="name">Name</string>
    <string name="nuis">Nuis</string>
    <string name="close">Close</string>
    <string name="search_categories">Search for categories</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="created_at">Created on</string>
    <string name="cash">Cash</string>
    <string name="quantity">x%s </string>
    <string name="currency">%s ALL</string>
    <string name="url_category_photos">https://develop.almotech.co/digital_supplier/public/storage/</string>
    <string name="escape_char">\n</string>
    <string name="empty_str"> </string>
    <string name="logout_confirm_txt">Are you sure you want to log out?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="client_name_placeholder">Client Name</string>
    <string name="date_placeholder">Weekday, dd MMM YYYY | Approved</string>
    <string name="quantity_placeholder">$0</string>
    <string name="no_results">No results found</string>
    <string name="category_placeholder">Category</string>
    <string name="no_items_err_msg">No items here</string>
    <string name="google_maps_error_title">Google Maps not installed</string>
    <string name="google_maps_supporting_text">You need to have Google Maps installed in your device to set the location</string>
    <string name="location_rationale">Allow DigitalSupplierAgent to access your location?</string>
    <string name="initials">AJ</string>
    <string name="client_name">Andrea Jones</string>
    <string name="client_email">andrea.jones@gmail.com</string>
    <string name="my_clients">My clients</string>
    <string name="search_categories_and_products">Search products or categories</string>
    <string name="client_item_transition_name">client_item_%1$d</string>
    <string name="client_fragment_transition_name">client_fragment_transition</string>
    <string name="order_item_transition_name">order_item_%1$d</string>
    <string name="order_details_transition_name">order_fragment_transition</string>
    <string name="no_items">No items found</string>
    <string name="currency_formatted">%d ALL </string>
    <string name="no_info_about_business_yet">No info about business yet</string>
    <string name="change_password_txt">Change password</string>
    <string name="no_address">No address</string>
    <string name="no_description">No description</string>

</resources>
